cmake_minimum_required(VERSION 2.8)
project(pructl)
add_executable(pructl pructl.c)
add_executable(prudbg prudbg.c)
include_directories(/usr/local/include ${CMAKE_SOURCE_DIR}/../libpru)
find_library(libpru  NAMES pru PATHS /usr/local/lib ${CMAKE_SOURCE_DIR}/../libpru/build)
find_library(libedit NAMES edit)
find_library(libutil NAMES util)
target_link_libraries(pructl ${libpru} BlocksRuntime)
target_link_libraries(prudbg ${libpru} ${libedit} ${libutil})
set(CMAKE_C_FLAGS "-Werror -Wno-reserved-id-macro -Wno-padded -fblocks")
install(TARGETS pructl prudbg DESTINATION sbin)
